fixed radio button selecting multiple options

--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,7 @@
   <!-- Javascript -->
   <script defer src="/app/js/contact.js"></script>
   <script defer src="/app/js/nav-toggle.js"></script>
+  <script defer src="/app/js/form.js"></script>
 
   <title>Digital Shovel - Contact Us</title>
 </head>
@@ -191,11 +192,11 @@
         <div class="fieldset fieldset__full-width flex flex-col">
           <label class="fieldset__label">Purpose of Contact</label>
           <div class="flex">
-            <input type="radio" name="message" id="message" value="message">
+            <input type="radio" name="radio-option" id="message" value="message">
             <label class="fieldset__radio fieldset__radio--add-bl-radius" for="message">Message</label>
-            <input type="radio" name="order" id="order" value="order">
+            <input type="radio" name="radio-option" id="order" value="order">
             <label class="fieldset__radio fieldset__radio--add-border" for="order">Order</label>
-            <input type="radio" name="both" id="both" value="both">
+            <input type="radio" name="radio-option" id="both" value="both">
             <label class="fieldset__radio fieldset__radio--add-br-radius" for="both">Both</label>
           </div>
         </div>
