removed noah, added liam

--- a/team.html
+++ b/team.html
@@ -319,16 +319,6 @@
 
           <li class="team__list-member flex gap--sm">
             <img class="icon--lg" src="images/photos/team/default-avatar.png"
-              alt="Headshot Photograph of Noah">
-            <div class="team__list-member-details flex flex-col jc-c">
-              <h6>Noah</h6>
-              <small>Electronics Designer (MEng)</small>
-              <small class="text--blue fadeIn">Ben is not telling the truth</small>
-            </div>
-          </li>
-
-          <li class="team__list-member flex gap--sm">
-            <img class="icon--lg" src="images/photos/team/default-avatar.png"
               alt="Headshot Photograph of Prasanth">
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Prasanth</h6>
@@ -402,6 +392,16 @@
               <h6>Meghal</h6>
               <small>Mechanical Design Engineer (MS)</small>
               <small class="text--blue fadeIn">Adulting is soup and I am a fork</small>
+            </div>
+          </li>
+
+          <li class="team__list-member flex gap--sm">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png"
+              alt="Headshot Photograph of Meghal">
+            <div class="team__list-member-details flex flex-col jc-c">
+              <h6>Liam</h6>
+              <small>Electronics Technologist</small>
+              <small class="text--blue fadeIn">Jaw specialist</small>
             </div>
           </li>
 
