--- a/products-minipod.html
+++ b/products-minipod.html
@@ -86,7 +86,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <!-- <li>
               <a class="dropdown__link" href="#">
                 <img class="icon--md" src="images/icons/icon_power-supply.svg" alt="Minipod Icon">
                 <div class="dropdown__text">
@@ -102,12 +102,12 @@
                   <small>Highest efficiency and savings on the market</small>
                 </div>
               </a>
-            </li>
+            </li> -->
           </ul>
         </li>
-        <li><a class="navbar__link" href="team.html">Team</a></li>
-        <li><a class="navbar__link" href="merch.html">Merch</a></li>
-        <li><a class="navbar__link" href="faq.html">Faq</a></li>
+        <!-- <li><a class="navbar__link" href="team.html">Team</a></li> -->
+        <!-- <li><a class="navbar__link" href="merch.html">Merch</a></li> -->
+        <!-- <li><a class="navbar__link" href="faq.html">Faq</a></li> -->
         <li><a class="navbar__link" href="contact.html">Contact Us</a></li>
         <li><a href="http://demo.shovel.digital/" target="_blank" class="btn btn--primary mobile">Login
             <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
@@ -121,7 +121,7 @@
         </li>
       </ul>
 
-      <a href="http://demo.shovel.digital/" target="_blank" class="btn btn__navbar btn--primary">Login
+      <!-- <a href="http://demo.shovel.digital/" target="_blank" class="btn btn__navbar btn--primary">Login
         <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
           xmlns="http://www.w3.org/2000/svg">
           <path d="M7.49 6L7.5 6" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
@@ -129,7 +129,7 @@
           <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
             stroke-linejoin="round" />
         </svg>
-      </a>
+      </a> -->
 
       <button class="navbar__hamburger" aria-controls="navbar__links" aria-expanded="false" href="home.html">
         <span class="sr-only">Menu</span>
@@ -548,7 +548,7 @@
       </div>
     </section>
 
-    <section class="competitors">
+    <!-- <section class="competitors">
       <div class="container flex flex-col ai-c gap--md">
         <h2 class="text__heading flex flex-col-mobile ai-c gap--sm">
           Minipod <span class="text--blue">vs</span> Competitors
@@ -804,7 +804,7 @@
           </svg>
         </a>
       </div>
-    </section>
+    </section> -->
 
   </main>
 
