contact form fix

--- a/contact.html
+++ b/contact.html
@@ -192,12 +192,12 @@
         <div class="fieldset fieldset__full-width flex flex-col">
           <label class="fieldset__label">Purpose of Contact</label>
           <div class="flex">
-            <input type="radio" name="Purpose of Contact" id="message" value="message">
-            <label class="fieldset__radio fieldset__radio--add-bl-radius" for="message">Message</label>
-            <input type="radio" name="Purpose of Contact" id="order" value="order">
-            <label class="fieldset__radio fieldset__radio--add-border" for="order">Order</label>
-            <input type="radio" name="Purpose of Contact" id="both" value="both">
-            <label class="fieldset__radio fieldset__radio--add-br-radius" for="both">Both</label>
+            <input type="radio" name="Purpose-of-Contact" id="message" value="Message">
+            <label class="fieldset__radio fieldset__radio--add-bl-radius" for="Message">Message</label>
+            <input type="radio" name="Purpose-of-Contact" id="order" value="Amount-of-Minipods">
+            <label class="fieldset__radio fieldset__radio--add-border" for="Amount-of-Minipods">Order</label>
+            <input type="radio" name="Purpose-of-Contact" id="both" value="Message-and-Order">
+            <label class="fieldset__radio fieldset__radio--add-br-radius" for="Message-and-Order">Both</label>
           </div>
         </div>
         <div class="fieldset fieldset__full-width fieldset__order flex flex-col">
