--- a/contact.html
+++ b/contact.html
@@ -192,11 +192,11 @@
         <div class="fieldset fieldset__full-width flex flex-col">
           <label class="fieldset__label">Purpose of Contact</label>
           <div class="flex">
-            <input type="radio" name="Purpose-of-Contact" id="message" value="Message">
+            <input type="radio" name="Purpose-of-Contact" id="Message" value="Message">
             <label class="fieldset__radio fieldset__radio--add-bl-radius" for="Message">Message</label>
-            <input type="radio" name="Purpose-of-Contact" id="order" value="Amount-of-Minipods">
+            <input type="radio" name="Purpose-of-Contact" id="Message-and-Order" value="Amount-of-Minipods">
             <label class="fieldset__radio fieldset__radio--add-border" for="Amount-of-Minipods">Order</label>
-            <input type="radio" name="Purpose-of-Contact" id="both" value="Message-and-Order">
+            <input type="radio" name="Purpose-of-Contact" id="Message-and-Order" value="Message-and-Order">
             <label class="fieldset__radio fieldset__radio--add-br-radius" for="Message-and-Order">Both</label>
           </div>
         </div>
