--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,6 @@
   <!-- Javascript -->
   <script defer src="/app/js/contact.js"></script>
   <script defer src="/app/js/nav-toggle.js"></script>
-  <script defer src="/app/js/form.js"></script>
 
   <title>Digital Shovel - Contact Us</title>
 </head>
@@ -194,7 +193,7 @@
           <div class="flex">
             <input type="radio" name="Purpose-of-Contact" id="Message" value="Message">
             <label class="fieldset__radio fieldset__radio--add-bl-radius" for="Message">Message</label>
-            <input type="radio" name="Purpose-of-Contact" id="Message-and-Order" value="Amount-of-Minipods">
+            <input type="radio" name="Purpose-of-Contact" id="Amount-of-Minipods" value="Amount-of-Minipods">
             <label class="fieldset__radio fieldset__radio--add-border" for="Amount-of-Minipods">Order</label>
             <input type="radio" name="Purpose-of-Contact" id="Message-and-Order" value="Message-and-Order">
             <label class="fieldset__radio fieldset__radio--add-br-radius" for="Message-and-Order">Both</label>
