--- a/contact.html
+++ b/contact.html
@@ -193,19 +193,19 @@
           <div class="flex">
             <input type="radio" name="Purpose-of-Contact" id="Message" value="Message">
             <label class="fieldset__radio fieldset__radio--add-bl-radius" for="Message">Message</label>
-            <input type="radio" name="Purpose-of-Contact" id="Amount-of-Minipods" value="Amount-of-Minipods">
-            <label class="fieldset__radio fieldset__radio--add-border" for="Amount-of-Minipods">Order</label>
+            <input type="radio" name="Purpose-of-Contact" id="Minipod-Order-Quantity" value="Minipod-Order-Quantity">
+            <label class="fieldset__radio fieldset__radio--add-border" for="Minipod-Order-Quantity">Order</label>
             <input type="radio" name="Purpose-of-Contact" id="Message-and-Order" value="Message-and-Order">
             <label class="fieldset__radio fieldset__radio--add-br-radius" for="Message-and-Order">Both</label>
           </div>
         </div>
         <div class="fieldset fieldset__full-width fieldset__order flex flex-col">
-          <label class="fieldset__label" for="order">Minipod Order Quantity</label>
-          <input class="fieldset__text" type="number" id="order" name="order" placeholder="2" required>
+          <label class="fieldset__label" for="Minipod-Order-Quantity">Minipod Order Quantity</label>
+          <input class="fieldset__text" type="number" id="Minipod-Order-Quantity" name="Minipod-Order-Quantity" placeholder="2" required>
         </div>
         <div class="fieldset fieldset__full-width fieldset__message flex flex-col">
-          <label class="fieldset__label" for="message">Message</label>
-          <textarea class="fieldset__text" type="text" id="message" name="contact"
+          <label class="fieldset__label" for="Message">Message</label>
+          <textarea class="fieldset__text" type="text" id="message" name="Message"
             placeholder="Tell us more about your project, business needs, and budget." required></textarea>
         </div>
         <input type="hidden" name="_next" value="https://digitalshovel.netlify.app/thanks.html">
