--- a/contact.html
+++ b/contact.html
@@ -166,27 +166,27 @@
       <form action="https://formsubmit.co/4d1bd24a91670270171d23029f37290f" method="POST" autocomplete="on" enctype="multipart/form-data">
         <div class="fieldset flex flex-col">
           <label class="fieldset__label" for="Name">First Name</label>
-          <input class="fieldset__text" type="text" id="name" name="Name" placeholder="John" autocomplete="on" required>
+          <input class="fieldset__text" type="text" id="input-name" name="Name" placeholder="John" autocomplete="on" required>
         </div>
         <div class="fieldset flex flex-col">
           <label class="fieldset__label" for="Surname">Last Name</label>
-          <input class="fieldset__text" type="text" id="surname" name="Surname" placeholder="Doe" autocomplete="on" required>
+          <input class="fieldset__text" type="text" id="input-surname" name="Surname" placeholder="Doe" autocomplete="on" required>
         </div>
         <div class="fieldset flex flex-col">
           <label class="fieldset__label" for="Email">Email</label>
-          <input class="fieldset__text" type="email" id="email" name="Email" placeholder="johndoe@example.com" autocomplete="on" required>
+          <input class="fieldset__text" type="email" id="input-email" name="Email" placeholder="johndoe@example.com" autocomplete="on" required>
         </div>
         <div class="fieldset flex flex-col">
           <label class="fieldset__label" for="Phone">Phone</label>
-          <input class="fieldset__text" type="tel" id="phone" name="Phone" placeholder="+5 (555) 555 5555" autocomplete="on" required>
+          <input class="fieldset__text" type="tel" id="input-phone" name="Phone" placeholder="+5 (555) 555 5555" autocomplete="on" required>
         </div>
         <div class="fieldset flex flex-col">
           <label class="fieldset__label" for="Company">Company</label>
-          <input class="fieldset__text" type="text" id="company" name="Company" placeholder="Digital Shovel" autocomplete="on" required>
+          <input class="fieldset__text" type="text" id="input-company" name="Company" placeholder="Digital Shovel" autocomplete="on" required>
         </div>
         <div class="fieldset flex flex-col">
           <label class="fieldset__label" for="Country">Country</label>
-          <input class="fieldset__select" type="text" id="country" name="Country" placeholder="Canada" autocomplete="on" required>
+          <input class="fieldset__select" type="text" id="input-country" name="Country" placeholder="Canada" autocomplete="on" required>
         </div>
         <div class="fieldset fieldset__full-width flex flex-col">
           <label class="fieldset__label">Purpose of Contact</label>
@@ -201,11 +201,11 @@
         </div>
         <div class="fieldset fieldset__full-width fieldset__order flex flex-col">
           <label class="fieldset__label" for="Minipod-Order-Quantity">Minipod Order Quantity</label>
-          <input class="fieldset__text" type="number" id="Minipod-Order-Quantity" name="Minipod-Order-Quantity" placeholder="2" required>
+          <input class="fieldset__text" type="number" id="input-order" name="Minipod-Order-Quantity" placeholder="2" required>
         </div>
         <div class="fieldset fieldset__full-width fieldset__message flex flex-col">
           <label class="fieldset__label" for="Message">Message</label>
-          <textarea class="fieldset__text" type="text" id="message" name="Message"
+          <textarea class="fieldset__text" type="text" id="input-message" name="Message"
             placeholder="Tell us more about your project, business needs, and budget." required></textarea>
         </div>
         <input type="hidden" name="_next" value="https://digitalshovel.netlify.app/thanks.html">
