--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
 
           <li class="testimonials__list-item">
             <p class="list-item__body">
-              “Digital Shovel lets us focus more on acquisitions while they help us manage the day to day operations.”
+              “I can just set it and let Digital Shovel do all the work while I sit back and collect.”
             </p>
             <div class="list-item__divider"></div>
             <div class="flex gap--md ai-c">
@@ -586,49 +586,7 @@
 
           <li class="testimonials__list-item">
             <p class="list-item__body">
-              “Digital Shovel lets us focus more on acquisitions while they help us manage the day to day operations.”
-            </p>
-            <div class="list-item__divider"></div>
-            <div class="flex gap--md ai-c">
-              <img class="icon--md" src="images/icons/icon_sample-logo-1.svg" alt="" class="list-item__icon">
-              <div class="flex flex-col">
-                <h4 class="list-item__heading">Austin</h4>
-                <small class="list-item__subheading">from Genesis Digital Assets</small>
-              </div>
-            </div>
-          </li>
-
-          <li class="testimonials__list-item">
-            <p class="list-item__body">
-              “Digital Shovel lets us focus more on acquisitions while they help us manage the day to day operations.”
-            </p>
-            <div class="list-item__divider"></div>
-            <div class="flex gap--md ai-c">
-              <img class="icon--md" src="images/icons/icon_sample-logo-1.svg" alt="" class="list-item__icon">
-              <div class="flex flex-col">
-                <h4 class="list-item__heading">Austin</h4>
-                <small class="list-item__subheading">from Genesis Digital Assets</small>
-              </div>
-            </div>
-          </li>
-
-          <li class="testimonials__list-item">
-            <p class="list-item__body">
-              “Digital Shovel lets us focus more on acquisitions while they help us manage the day to day operations.”
-            </p>
-            <div class="list-item__divider"></div>
-            <div class="flex gap--md ai-c">
-              <img class="icon--md" src="images/icons/icon_sample-logo-1.svg" alt="" class="list-item__icon">
-              <div class="flex flex-col">
-                <h4 class="list-item__heading">Austin</h4>
-                <small class="list-item__subheading">from Genesis Digital Assets</small>
-              </div>
-            </div>
-          </li>
-
-          <li class="testimonials__list-item">
-            <p class="list-item__body">
-              “Digital Shovel lets us focus more on acquisitions while they help us manage the day to day operations.”
+              “With all the security and low power cost, this was a no brainer for us starting with 20 rigs.”
             </p>
             <div class="list-item__divider"></div>
             <div class="flex gap--md ai-c">
@@ -894,25 +852,25 @@
           <small class="footer__heading">Products</small>
           <ul class="footer__list">
             <li><a href="products-minipod.html" class="footer__list-item">Minipod</a></li>
-            <li><a href="products-minipod.html" class="footer__list-item">Power Supply</a></li>
+            <!-- <li><a href="products-minipod.html" class="footer__list-item">Power Supply</a></li> -->
           </ul>
         </div>
         <div class="footer__column">
           <small class="footer__heading">Navigation</small>
           <ul class="footer__list">
             <li><a href="products-minipod.html" class="footer__list-item">Products</a></li>
-            <li><a href="team.html" class="footer__list-item">Team</a></li>
+            <!-- <li><a href="team.html" class="footer__list-item">Team</a></li>
             <li><a href="merch.html" class="footer__list-item">Merch</a></li>
-            <li><a href="faq.html" class="footer__list-item">Faq</a></li>
+            <li><a href="faq.html" class="footer__list-item">Faq</a></li> -->
             <li><a href="contact.html" class="footer__list-item">Contact</a></li>
           </ul>
         </div>
-        <div class="footer__column">
+        <!-- <div class="footer__column">
           <small class="footer__heading">Company</small>
           <ul class="footer__list">
             <li><a href="team.html" class="footer__list-item">Careers</a></li>
           </ul>
-        </div>
+        </div> -->
       </div>
       <div class="footer__divider"></div>
       <div class="flex flex-col-mobile jc-sb gap--sm">
