--- a/thanks.html
+++ b/thanks.html
@@ -178,25 +178,25 @@
           <small class="footer__heading">Products</small>
           <ul class="footer__list">
             <li><a href="products-minipod.html" class="footer__list-item">Minipod</a></li>
-            <li><a href="products-minipod.html" class="footer__list-item">Power Supply</a></li>
+            <!-- <li><a href="products-minipod.html" class="footer__list-item">Power Supply</a></li> -->
           </ul>
         </div>
         <div class="footer__column">
           <small class="footer__heading">Navigation</small>
           <ul class="footer__list">
             <li><a href="products-minipod.html" class="footer__list-item">Products</a></li>
-            <li><a href="team.html" class="footer__list-item">Team</a></li>
+            <!-- <li><a href="team.html" class="footer__list-item">Team</a></li>
             <li><a href="merch.html" class="footer__list-item">Merch</a></li>
-            <li><a href="faq.html" class="footer__list-item">Faq</a></li>
+            <li><a href="faq.html" class="footer__list-item">Faq</a></li> -->
             <li><a href="contact.html" class="footer__list-item">Contact</a></li>
           </ul>
         </div>
-        <div class="footer__column">
+        <!-- <div class="footer__column">
           <small class="footer__heading">Company</small>
           <ul class="footer__list">
             <li><a href="team.html" class="footer__list-item">Careers</a></li>
           </ul>
-        </div>
+        </div> -->
       </div>
       <div class="footer__divider"></div>
       <div class="flex flex-col-mobile jc-sb gap--sm">
