--- a/merch.html
+++ b/merch.html
@@ -109,7 +109,7 @@
         <!-- <li><a class="navbar__link" href="merch.html">Merch</a></li> -->
         <!-- <li><a class="navbar__link" href="faq.html">Faq</a></li> -->
         <li><a class="navbar__link" href="contact.html">Contact Us</a></li>
-        <li><a href="http://demo.shovel.digital/" target="_blank" class="btn btn--primary mobile">Login
+        <!-- <li><a href="http://demo.shovel.digital/" target="_blank" class="btn btn--primary mobile">Login -->
             <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
               xmlns="http://www.w3.org/2000/svg">
               <path d="M7.49 6L7.5 6" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
