changes email to sales

--- a/contact.html
+++ b/contact.html
@@ -163,7 +163,7 @@
 
     <section class="form container">
 
-      <form action="https://formsubmit.co/4d1bd24a91670270171d23029f37290f" method="POST" autocomplete="on" enctype="multipart/form-data">
+      <form action="https://formsubmit.co/sales@digitalshovel.com" method="POST" autocomplete="on" enctype="multipart/form-data">
         <div class="fieldset flex flex-col">
           <label class="fieldset__label" for="Name">First Name</label>
           <input class="fieldset__text" type="text" id="input-name" name="Name" placeholder="John" autocomplete="on" required>
