fixed testimonials and removed policy

--- a/thanks.html
+++ b/thanks.html
@@ -202,8 +202,8 @@
       <div class="flex flex-col-mobile jc-sb gap--sm">
         <div class="flex flex-col-mobile gap--sm">
           <small class="footer__copyright">© 2022 Digital Shovel Holdings Inc.</small>
-          <small class="footer__copyright desktop">·</small>
-          <small class="footer__copyright">Privacy Policy & Disclaimer</small>
+          <!-- <small class="footer__copyright desktop">·</small>
+          <small class="footer__copyright">Privacy Policy & Disclaimer</small> -->
         </div>
         <div class="flex gap--sm ai-c">
           <img class="footer__social" src="images/icons/icon_facebook.svg" alt="Facebook Logo Icon">
