added scroll for more animation

--- a/products-minipod.html
+++ b/products-minipod.html
@@ -332,6 +332,13 @@
                 fill="var(--primary-color)" />
             </svg>
           </button>
+          <div class="scroll">
+            <div class="scroll__mouse"></div>
+            <span class="scroll__text">scroll for more</span>
+            <svg class="scroll__arrow" width="13" height="12" viewBox="0 0 13 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M2.5 1L7.95455 6L2.5 11" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+          </div>
         </div>
       </div>
 
