minipod animation position fix

--- a/products-minipod.html
+++ b/products-minipod.html
@@ -151,7 +151,7 @@
       </div>
 
       <div class="hero__minipod-container">
-        <div class="hero__minipod">
+        <div class="hero__minipod hero__minipod--featured">
           <div class="cameraRotate_left">
             <div class="cameraRotate_right">
               <div class="base">
