browser detection test

--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
   <script defer src="/app/js/home.js"></script>
   <script defer src="/app/js/plug-n-play.js"></script>
   <script defer src="/app/js/nav-toggle.js"></script>
+  <script defer src="/app/js/browser-detect.js"></script>
 
   <title>Digital Shovel - Home</title>
 </head>
 
-<body>
+<body onload="fnBrowserDetect();">
 
   <header class="header">
 
