--- a/products-minipod.html
+++ b/products-minipod.html
@@ -25,6 +25,7 @@
   <!-- Javascript -->
   <script defer src="/app/js/nav-toggle.js"></script>
   <script defer src="/app/js/home.js"></script>
+  <script defer src="/app/js/browser-detect.js"></script>
 
   <title>Digital Shovel - Minipod</title>
 </head>
