--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                     <div class="fan-extension-6"></div>
                     <div class="fan-extension-7"></div>
                     <div class="fan-extension-8"></div>
-                    <div class="fan-swing-base only-safari">
+                    <div class="fan-swing-base">
                       <div class="fan-swing-1"></div>
                       <div class="fan-swing-2"></div>
                       <div class="fan-swing-3"></div>
@@ -273,7 +273,7 @@
                     <div class="fan-extension-6"></div>
                     <div class="fan-extension-7"></div>
                     <div class="fan-extension-8"></div>
-                    <div class="fan-swing-base only-safari">
+                    <div class="fan-swing-base">
                       <div class="fan-swing-1"></div>
                       <div class="fan-swing-2"></div>
                       <div class="fan-swing-3"></div>
@@ -294,7 +294,7 @@
                     <div class="fan-extension-6"></div>
                     <div class="fan-extension-7"></div>
                     <div class="fan-extension-8"></div>
-                    <div class="fan-swing-base only-safari">
+                    <div class="fan-swing-base">
                       <div class="fan-swing-1"></div>
                       <div class="fan-swing-2"></div>
                       <div class="fan-swing-3"></div>
@@ -315,7 +315,7 @@
                     <div class="fan-extension-6"></div>
                     <div class="fan-extension-7"></div>
                     <div class="fan-extension-8"></div>
-                    <div class="fan-swing-base only-safari">
+                    <div class="fan-swing-base">
                       <div class="fan-swing-1"></div>
                       <div class="fan-swing-2"></div>
                       <div class="fan-swing-3"></div>
