added contact sales in product page under sets

--- a/products-minipod.html
+++ b/products-minipod.html
@@ -111,14 +111,14 @@
         <!-- <li><a class="navbar__link" href="faq.html">Faq</a></li> -->
         <li><a class="navbar__link" href="contact.html">Contact Us</a></li>
         <!-- <li><a href="http://demo.shovel.digital/" target="_blank" class="btn btn--primary mobile">Login -->
-            <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
-              xmlns="http://www.w3.org/2000/svg">
-              <path d="M7.49 6L7.5 6" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
-                stroke-linejoin="round" />
-              <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
-                stroke-linejoin="round" />
-            </svg>
-          </a>
+        <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path d="M7.49 6L7.5 6" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
+            stroke-linejoin="round" />
+          <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
+            stroke-linejoin="round" />
+        </svg>
+        </a>
         </li>
       </ul>
 
@@ -334,11 +334,12 @@
             </svg>
           </button>
         </div>
-        
+
         <div class="scroll">
           <div class="scroll__mouse"></div>
           <span class="scroll__text">scroll for more</span>
-          <svg class="scroll__arrow" width="13" height="12" viewBox="0 0 13 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg class="scroll__arrow" width="13" height="12" viewBox="0 0 13 12" fill="none"
+            xmlns="http://www.w3.org/2000/svg">
             <path d="M2.5 1L7.95455 6L2.5 11" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
           </svg>
         </div>
@@ -467,7 +468,8 @@
         </p>
         <div class="flex flex-col gap--xlg mtop--xxl">
           <div class="minipod__set gap--lg ai-end jc-c">
-            <img class="minipod__set-img" src="images/illustrations/minipod-3set.svg" alt="Minipod 3 Unit Set Illustration">
+            <img class="minipod__set-img" src="images/illustrations/minipod-3set.svg"
+              alt="Minipod 3 Unit Set Illustration">
             <div class="flex flex-col gap--sm ai-c">
               <h4>3 Unit Set</h4>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
@@ -489,7 +491,8 @@
           </div>
 
           <div class="minipod__set gap--lg ai-end jc-c">
-            <img class="minipod__set-img" src="images/illustrations/minipod-4set.svg" alt="Minipod 4 Unit Set Illustration">
+            <img class="minipod__set-img" src="images/illustrations/minipod-4set.svg"
+              alt="Minipod 4 Unit Set Illustration">
             <div class="flex flex-col gap--sm ai-c">
               <h4>4 Unit Set</h4>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
@@ -511,7 +514,8 @@
           </div>
 
           <div class="minipod__set minipod__set-6 gap--lg ai-end jc-c">
-            <img class="minipod__set-img" src="images/illustrations/minipod-6set.svg" alt="Minipod 6 Unit Set Illustration">
+            <img class="minipod__set-img" src="images/illustrations/minipod-6set.svg"
+              alt="Minipod 6 Unit Set Illustration">
             <div class="flex flex-col gap--sm ai-c">
               <h4>6 Unit Set</h4>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
@@ -533,7 +537,8 @@
           </div>
 
           <div class="minipod__set minipod__set-8 gap--lg ai-end jc-c">
-            <img class="minipod__set-img" src="images/illustrations/minipod-8set.svg" alt="Minipod 8 Unit Set Illustration">
+            <img class="minipod__set-img" src="images/illustrations/minipod-8set.svg"
+              alt="Minipod 8 Unit Set Illustration">
             <div class="flex flex-col gap--sm ai-c">
               <h4>8 Unit Set</h4>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
@@ -554,6 +559,15 @@
             </div>
           </div>
         </div>
+        <a href="contact.html" class="btn btn--primary mtop--xxl mbot--lg">Contact Sales
+          <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
+            xmlns="http://www.w3.org/2000/svg">
+            <path d="M7.49 6L7.5 6" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
+              stroke-linejoin="round" />
+            <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
+              stroke-linejoin="round" />
+          </svg>
+        </a>
       </div>
     </section>
 
