apple fix (I'm losing my mind)

--- a/index.html
+++ b/index.html
@@ -30,12 +30,13 @@
   <script defer src="/app/js/home.js"></script>
   <script defer src="/app/js/plug-n-play.js"></script>
   <script defer src="/app/js/nav-toggle.js"></script>
-  <script defer src="/app/js/browser-detect.js"></script>
+  <script defer src="/app/js/detect.min.js"></script>
+  <script defer src="/app/js/detect-actions.js"></script>
 
   <title>Digital Shovel - Home</title>
 </head>
 
-<body onload="fnBrowserDetect();">
+<body>
 
   <header class="header">
 
