--- a/products-minipod.html
+++ b/products-minipod.html
@@ -25,7 +25,8 @@
   <!-- Javascript -->
   <script defer src="/app/js/nav-toggle.js"></script>
   <script defer src="/app/js/home.js"></script>
-  <script defer src="/app/js/browser-detect.js"></script>
+  <script defer src="/app/js/detect.min.js"></script>
+  <script defer src="/app/js/detect-actions.js"></script>
 
   <title>Digital Shovel - Minipod</title>
 </head>
