--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
   <script defer src="/app/js/home.js"></script>
   <script defer src="/app/js/plug-n-play.js"></script>
   <script defer src="/app/js/nav-toggle.js"></script>
-  <script defer src="/app/js/detect.min.js"></script>
-  <script defer src="/app/js/detect-actions.js"></script>
+  <!-- <script defer src="/app/js/detect.min.js"></script>
+  <script defer src="/app/js/detect-actions.js"></script> -->
 
   <title>Digital Shovel - Home</title>
 </head>
