--- a/index.html
+++ b/index.html
@@ -562,42 +562,42 @@
             <p class="list-item__body">
               “Digital Shovel lets us focus more on acquisitions while they help us manage the day to day operations.”
             </p>
-            <div class="list-item__divider"></div>
+            <!-- <div class="list-item__divider"></div>
             <div class="flex gap--md ai-c">
               <img class="icon--md" src="images/icons/icon_sample-logo-1.svg" alt="" class="list-item__icon">
               <div class="flex flex-col">
                 <h4 class="list-item__heading">Austin</h4>
                 <small class="list-item__subheading">from Genesis Digital Assets</small>
               </div>
-            </div>
+            </div> -->
           </li>
 
           <li class="testimonials__list-item">
             <p class="list-item__body">
               “I can just set it and let Digital Shovel do all the work while I sit back and collect.”
             </p>
-            <div class="list-item__divider"></div>
+            <!-- <div class="list-item__divider"></div>
             <div class="flex gap--md ai-c">
               <img class="icon--md" src="images/icons/icon_sample-logo-1.svg" alt="" class="list-item__icon">
               <div class="flex flex-col">
                 <h4 class="list-item__heading">Austin</h4>
                 <small class="list-item__subheading">from Genesis Digital Assets</small>
               </div>
-            </div>
+            </div> -->
           </li>
 
           <li class="testimonials__list-item">
             <p class="list-item__body">
               “With all the security and low power cost, this was a no brainer for us starting with 20 rigs.”
             </p>
-            <div class="list-item__divider"></div>
+            <!-- <div class="list-item__divider"></div>
             <div class="flex gap--md ai-c">
               <img class="icon--md" src="images/icons/icon_sample-logo-1.svg" alt="" class="list-item__icon">
               <div class="flex flex-col">
                 <h4 class="list-item__heading">Austin</h4>
                 <small class="list-item__subheading">from Genesis Digital Assets</small>
               </div>
-            </div>
+            </div> -->
           </li>
         </ul>
       </div>
