--- a/products-minipod.html
+++ b/products-minipod.html
@@ -142,6 +142,15 @@
 
   </header>
 
+  <div class="scroll scroll__product">
+    <!-- <div class="scroll__mouse"></div> -->
+    <span class="scroll__text">scroll for more</span>
+    <svg class="scroll__arrow" width="13" height="12" viewBox="0 0 13 12" fill="none"
+      xmlns="http://www.w3.org/2000/svg">
+      <path d="M2.5 1L7.95455 6L2.5 11" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+    </svg>
+  </div>
+
   <main class="main">
 
     <section class="hero container hero__feature flex flex-col ai-c">
@@ -334,15 +343,6 @@
                 fill="var(--primary-color)" />
             </svg>
           </button>
-        </div>
-
-        <div class="scroll">
-          <div class="scroll__mouse"></div>
-          <span class="scroll__text">scroll for more</span>
-          <svg class="scroll__arrow" width="13" height="12" viewBox="0 0 13 12" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <path d="M2.5 1L7.95455 6L2.5 11" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-          </svg>
         </div>
       </div>
 
