fixed more info link, fixed minipod sets features text

--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
           <img src="images/illustrations/minipod-back_with-text.svg" alt="Minipod Illustration Back Side">
           <div class="minipod__illustrations--shadow"></div>
         </div>
-        <a href="#" class="btn btn--primary btn--as-c">More Info
+        <a href="products-minipod.html" class="btn btn--primary btn--as-c">More Info
           <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <path d="M7.49 6L7.5 6" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
