--- a/products-minipod.html
+++ b/products-minipod.html
@@ -471,7 +471,7 @@
           <div class="minipod__set gap--lg ai-end jc-c">
             <img class="minipod__set-img" src="images/illustrations/minipod-3set.svg"
               alt="Minipod 3 Unit Set Illustration">
-            <div class="flex flex-col gap--sm ai-c">
+            <div class="minipod__set-text flex flex-col gap--sm ai-c">
               <h4>3 Unit Set</h4>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
@@ -494,7 +494,7 @@
           <div class="minipod__set gap--lg ai-end jc-c">
             <img class="minipod__set-img" src="images/illustrations/minipod-4set.svg"
               alt="Minipod 4 Unit Set Illustration">
-            <div class="flex flex-col gap--sm ai-c">
+            <div class="minipod__set-text flex flex-col gap--sm ai-c">
               <h4>4 Unit Set</h4>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
@@ -517,7 +517,7 @@
           <div class="minipod__set minipod__set-6 gap--lg ai-end jc-c">
             <img class="minipod__set-img" src="images/illustrations/minipod-6set.svg"
               alt="Minipod 6 Unit Set Illustration">
-            <div class="flex flex-col gap--sm ai-c">
+            <div class="minipod__set-text flex flex-col gap--sm ai-c">
               <h4>6 Unit Set</h4>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
@@ -540,7 +540,7 @@
           <div class="minipod__set minipod__set-8 gap--lg ai-end jc-c">
             <img class="minipod__set-img" src="images/illustrations/minipod-8set.svg"
               alt="Minipod 8 Unit Set Illustration">
-            <div class="flex flex-col gap--sm ai-c">
+            <div class="minipod__set-text flex flex-col gap--sm ai-c">
               <h4>8 Unit Set</h4>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
