--- a/contact.html
+++ b/contact.html
@@ -163,7 +163,7 @@
 
     <section class="form container">
 
-      <form action="https://formsubmit.co/n.panayotakos@digitalshovel.com" method="POST" autocomplete="on" enctype="multipart/form-data">
+      <form action="https://formsubmit.co/154cc02bda65e3164c84d8ec4a5cf7bb" method="POST" autocomplete="on" enctype="multipart/form-data">
         <div class="fieldset flex flex-col">
           <label class="fieldset__label" for="Name">First Name</label>
           <input class="fieldset__text" type="text" id="input-name" name="Name" placeholder="John" autocomplete="on" required>
@@ -208,7 +208,7 @@
           <textarea class="fieldset__text" type="text" id="input-message" name="Message"
             placeholder="Tell us more about your project, business needs, and budget." required></textarea>
         </div>
-        <input type="hidden" name="_next" value="https://digitalshovel.netlify.app/thanks.html">
+        <input type="hidden" name="_next" value="https://digitalshovel.com/thanks.html">
         <input class="btn btn--primary btn--form" type="submit">
       </form>
 
